2022-11-16  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/e.tmac: Integrate better with papersize.tmac by no longer
	forcing line (and title) length to 6 inches for typesetters on
	initialization.  Gather default line length from output device
	description, possibly modified later (by other macro file or
	input).  No change to terminal ("nroff mode") output.
	* NEWS: Add item.

2022-11-16  Peter Schaffter <peter@schaffter.ca>

	* tmac/papersize.tmac: If a paper format has been selected,
	smuggle right margin setting to mom(7) if not overridden by the
	user.  See discussion in <https://lists.gnu.org/archive/html/\
	groff/2022-11/msg00081.html> and (some) follow-ups.

2022-11-12  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/doc.am (doc/groff-man-pages.pdf)
	(doc/groff-man-pages.utf8.txt): Add dependencies on new
	`TMAC_PACKAGE_MAN` and `TMAC_PACKAGE_MDOC` convenience macros.

2022-11-12  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/tmac.am (TMAC_PACKAGE_MAN, TMAC_PACKAGE_MDOC): Define
	convenience macros for in-tree documents to depend on.

2022-11-12  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/an.tmac: Trivially refactor.  Rename `an-section` to
	`an*section`.

2022-11-12  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grolbp/lbp.cpp (usage): Tweak usage message.  The
	output driver should be perfectly capable of handling output
	from non-GNU (but device-independent) troffs.

2022-11-12  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grops/ps.cpp (usage): Employ more informative
	metasyntactic variable names in usage message.  Also summarize
	program's function and direct reader to man page if help
	explicitly requested (inferred from identity of output stream).

2022-11-11  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/an.tmac: Trivially refactor for congruence with
	documentary terminology.  Rename strings and macros.